--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
         <div class="container">
             <a href="index.html"><img class="logo" src="./img/logo.png" alt=""></a>
             <div class="social">
-                <a href="http://facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100001037546565" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
                 <a href="http://twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="http://instagram.com" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="https://www.instagram.com/muhammed_m_sada/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
                 <a href="http://youtube.com" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
             </div>
             <ul>
